--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10072,7 +10072,7 @@ body {
     visibility: hidden;
   }
   .nav-account .nav-account__item.has-children ul.main-nav__sub--account {
-    min-width: 240px;
+    /* min-width: 240px; */
     padding-block: 0;
   }
   .nav-account .nav-account__item.has-children ul.main-nav__sub--account li > a {
@@ -10209,7 +10209,7 @@ body {
   display: none;
   top: 0;
   bottom: 0;
-  width: 210px;
+  width: 100px;
   background-color: #fff;
   left: -25px;
   margin-left: 0;
@@ -10381,7 +10381,7 @@ input.header-mobile__search-control:focus {
   }
 
   .header-mobile__logo-img {
-    width: 97px;
+    width: 80px;
     height: auto;
   }
 
@@ -10727,13 +10727,13 @@ input.header-mobile__search-control:focus {
   display: block;
   position: relative;
   color: #fff;
-  padding: 0 34px;
-  line-height: 62px;
+  padding: 10px 34px 0 34px;
+  line-height: 35px;
   text-decoration: none;
   position: relative;
   font-family: "Montserrat", sans-serif;
   font-size: 12px;
-  font-weight: 700;
+  /* font-weight: 700; */
   font-style: normal;
   text-transform: uppercase;
   -webkit-transition: color 0.3s ease;
@@ -11025,7 +11025,7 @@ input.header-mobile__search-control:focus {
   z-index: 1000;
   margin: 0;
   padding: 0;
-  min-width: 240px;
+  /* min-width: 240px; */
   background-color: #fff;
   border-radius: 10px;
   opacity: 0;
@@ -38179,4 +38179,128 @@ ol, ul
   position: absolute;
   top: 0.3rem;
   left: 50%;
+}
+
+.header-logo__img 
+{
+  width: 50px !important;
+}
+
+.main-nav__list > li > a i
+{
+  display: block;
+  font-size: 18px;
+}
+
+.br-20
+{
+  border-radius: 20px;
+}
+
+.profile-post
+{
+  width: 50px;
+  height: 50px;
+  box-sizing: border-box;
+  background-clip: content-box;
+  border-radius: 50%;
+  background-color: #eee;
+}
+
+.box-border
+{
+  border: 1px solid #ccc;
+	border-radius: 20px;
+}
+
+.btn-border
+{
+  border: 1px solid #ccc;
+	border-radius: 30px;
+}
+
+.pointer
+{
+  cursor: pointer;
+}
+
+.font-weight-500
+{
+  font-weight: 500;
+}
+
+.share-box
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border: none;
+}
+
+.action-box
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border-top: 1px solid #ccc;
+  padding: 5px;
+}
+
+.post-stat
+{
+  display: flex;
+  margin: 0 16px;
+  overflow: hidden;
+  padding: 8px 0;
+  justify-content: space-between;
+}
+
+.form-control-md 
+{
+  height: 40px;
+}
+
+.action-box .like, .action-box .comment, .action-box .share
+{
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: all 0.3s linear;
+}
+
+.action-box .like:hover, .action-box .comment:hover, .action-box .share:hover
+{
+  background: #eee;
+}
+
+.action-box .like.active
+{
+  background: #d2e4ff;
+}
+
+.btn-action-post
+{
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+.image-preview
+{
+    width: 100%;
+    height: 270px;
+    display: block;
+    border: 3px solid #f1f1f1;
+    box-shadow: 0 0 5px 0 rgb(0 0 0 / 25%);
+    border-radius: 10px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    overflow: hidden;
+    background-color: #eee;
+}
+
+.image-preview img
+{
+    width: 100%;
 }
